--- a/test1.1
+++ b/test1.1
@@ -4,6 +4,7 @@ import telebot
 from datetime import datetime
 from auth_data import token
 
+token = "8408784006:AAHJ1xW4kdI9YvogNuHELLqaIXmqZRLbY64"
 
 def get_data():
     url = ("https://contract.mexc.com/api/v1/contract/ticker?symbol=BTC_USDT")
